k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: carepulse
  labels:
    name: carepulse
    tier: production
